--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Core
+# Core (GPU version)
 torch>=2.0.0
 numpy>=1.24.0
 gymnasium>=0.28.0
@@ -21,7 +21,3 @@ pandas>=2.0.0
 # Testing
 pytest>=7.3.0
 pytest-cov>=4.1.0
-
-# For FL project add:
-opacus>=1.4.0  # Differential privacy
-crypten>=0.4.0  # Secure computation
